@@ -68,6 +68,9 @@ Changes since Asterisk 1.4-beta was branched:
   * Added 'E' and 'V' commands to ExternalIVR.
   * Added 'DBDel' and 'DBDelTree' manager commands.
   * Added 'core show channels count' CLI command.
+  * Added the DEVSTATE() dialplan function which allows retrieving any device
+    state in the dialplan, as well as creating custom device states that are
+	controllable from the dialplan.
 
 SIP changes
 -----------
